# SkyZero

./: .gitignore  LICENSE  README.md  alphazero.py  alphazero_parallel.py  alphazero_play.py  battle.py  export_onnx.py  gomoku_gui.py  nets.py  nets_v2.py  play.py  playgame.py  policy_surprise_weighting.py  replay_buffer.py  utils.py
CSkyZero_V2.1/: .gitignore  CMakeLists.txt  alphazero.h  alphazero_parallel.h  convert_cpp_to_python.py  generate_openings  gomoku_play  gomoku_train  nets.h  playgame.h  replaybuffer.h  utils.h
CSkyZero_V2.1/envs/: gomoku.h
CSkyZero_V2.1/gomoku/: generate_openings.cpp  gomoku_play.cpp  gomoku_train.cpp
CSkyZero_V2.1/tictactoe/: tictactoe_play.cpp  tictactoe_train.cpp
CSkyZero_V2.2/: alphazero_parallel.h  convert_cpp_model_to_python.py  playgame.h  plot_from_checkpoint.py  policy_surprise_weighting.h  replaybuffer.h
CSkyZero_V2.2/envs/: gomoku.h
CSkyZero_V3/: .gitignore  alphazero.h  alphazero_parallel.h  convert_cpp_checkpoint_to_python.py  gomoku_train  nets.h  playgame.h  replaybuffer.h
CSkyZero_V3.1/: .gitignore  CMakeLists.txt  alphazero.h  alphazero_parallel.h  playgame.h  plot_from_checkpoint.py  policy_surprise_weighting.h  replaybuffer.h  utils.h
CSkyZero_V3.1/envs/: gomoku.h  tictactoe.h
CSkyZero_V3.1/gomoku/: gomoku_train.cpp
CSkyZero_V3/envs/: gomoku.h  gomoku_openings.txt  tictactoe.h
CSkyZero_V3/gomoku/: gomoku_play.cpp  gomoku_train.cpp
CSkyZero_V3/tictactoe/: tictactoe_play.cpp  tictactoe_train.cpp
Distillation/: distillation.py
DodgePPO/: .gitignore  README.md  config.py  env_dodge.py  evaluate.py  networks.py  requirements.txt  retrain.sh  train_ppo.py
DodgePPO/configs/: dodge.cfg
DodgeSAC/: .gitignore  README.md  analyze_energy.py  common.py  config_rl.py  env_dodge.py  env_dodge_gpu.py  eval_behavior.py  evaluate.py  record_play.py  replay_buffer.py  sac_net.py  train_sac.py  train_sac_gpu.py  viewer.html
KataGoModel/: NOTES.md  model.py
Papers/: AlphaZero算法简介及伪代码.html  AlphaZero算法简介及伪代码.md  GumbelAlphaZero算法简介及伪代码.html  GumbelAlphaZero算法简介及伪代码.md  StochasticAlphaZero算法简介及伪代码.html  StochasticAlphaZero算法简介及伪代码.md  蒙特卡洛树搜索算法简介及伪代码.html  蒙特卡洛树搜索算法简介及伪代码.md
SkyZero_2048/: .gitignore  CLAUDE.md  data2048_nbt_run.out
SkyZero_2048/cpp/: CMakeLists.txt  infer_server_2048.h  mcts_probe_2048_main.cpp  npy.h  selfplay2048_main.cpp  selfplay2048_par_main.cpp  skyzero_2048.h  skyzero_2048_test.cpp
SkyZero_2048/cpp/envs/: game2048.h
SkyZero_2048/python/: async_rows.py  augment.py  bucket.py  evaluate.py  export_model.py  game.py  init_model.py  loop.py  mcts.py  model_config.py  nets.py  play_web.py  selfplay.py  selfplay_parallel.py  shuffle.py  train.py  value_transform.py  view_loss.py  warmup.py
SkyZero_2048/scripts/: build.sh  faster_run.sh  play_web.sh  run.sh
SkyZero_2048_V2/: .gitignore  CLAUDE.md
SkyZero_2048_V2/cpp/: infer_server_2048.h  mcts_probe_2048_main.cpp  policy_surprise_weighting.h  reload_stress_2048_main.cpp  selfplay2048_main.cpp  selfplay2048_par_main.cpp  skyzero_2048.h  skyzero_2048_test.cpp
SkyZero_2048_V2/python/: async_rows.py  compute_selfplay_target.py  data_processing.py  evaluate.py  export_model.py  full_nets.py  init_model.py  mcts.py  model_config.py  nets.py  shuffle.py  train.py  value_transform.py  view_loss.py
SkyZero_2048_V2/scripts/: faster_run.sh  run.sh
SkyZero_V0/: NETWORK_SIZING.md  alphazero.py  alphazero_parallel.py  utils.py
SkyZero_V0/envs/: gomoku.py
SkyZero_V0/gomoku/: gomoku_train.py
SkyZero_V0/tictactoe/: tictactoe_play.py  tictactoe_train.py
SkyZero_V1/: .gitignore  alphazero.py  alphazero_parallel.py  config.py  gumbel_select.md  mcts_selectors.py  nets.py  playgame.py  playgame_web.py  policy_surprise_weighting.py  replaybuffer.py  skyzero.py  skyzero_core.py  skyzero_parallel.py  softresign.py  utils.py
SkyZero_V1/envs/: tictactoe.py
SkyZero_V1/gomoku/: gomoku.cfg  (+2 more)
SkyZero_V2/: .gitignore  alphazero.py  alphazero_play.py  battle.py  playgame.py  replay_buffer.py  utils.py
SkyZero_V3/: alphazero.py  alphazero_parallel.py  battle.py  export_onnx.py  nets.py  playgame.py  replaybuffer.py
SkyZero_V4/: .gitignore
SkyZero_V4/cpp/: CMakeLists.txt  alphazero.h  alphazero_parallel.h  alphazero_tree_parallel.h  gomoku_eval_main.cpp  gomoku_play_main.cpp  mcts_probe_main.cpp  npz_writer.h  numpywrite.cpp  numpywrite.h  play_main.cpp  policy_init.h  policy_surprise_weighting.h  random_opening.h  selfplay_main.cpp  selfplay_manager.h  subtree_value_bias.h  utils.h
SkyZero_V4/cpp/envs/: gomoku.h
SkyZero_V5/: .gitignore
SkyZero_V5.1/cpp_ab_puct/: CMakeLists.txt  alphazero_tree_parallel.h  gomoku_ab_main.cpp  policy_init.h  selfplay_manager.h
SkyZero_V6/: .gitignore
SkyZero_V7/: .gitignore  SETUP.md
SkyZero_V7.1/: .gitignore  CLAUDE.md  SETUP.md
SkyZero_V7.4/: .gitignore
SkyZero_V7.5/: CLAUDE.md
SkyZero_V7.7/: .gitignore
SkyZero_V7/cpp/: CMakeLists.txt  alphazero.h  alphazero_parallel.h  gomoku_ab_main.cpp  gomoku_elo_main.cpp  gomoku_play_main.cpp  mcts_bench_main.cpp  mcts_probe_main.cpp  random_opening.h  selfplay_main.cpp  selfplay_manager.h  skyzero_parallel.h  skyzero_tree_parallel.h
Tennis/: index.html
battle/: battle.py
connect4/: battle.py  connect4.py  connect4_play.py  connect4_train.py  connect4_train_parallel.py
envs/: gomoku.py  gomoku_gui.py  tictactoe.py
gomoku/: battle.py  gomoku.py  gomoku_gui.py  gomoku_play.py  gomoku_selfplay.py  gomoku_train.py  gomoku_train_parallel.py
gomoku_0422_9/: gomoku.py  gomoku_play.py  gomoku_selfplay.py  gomoku_train.py
gomoku_0529_15/: gomoku_selfplay.py  gomoku_train.py
gomoku_0708_15/: .syncthing.gomoku_train.py.tmp  gomoku_play.py  gomoku_train.py
gomoku_9/: gomoku.py  gomoku_play.py  gomoku_train.py  gomoku_train_parallel.py
log/: 2026-05-05.txt
researches/: dirichlet_noise_vision.py  same_alpha_diff_size.py  smz_alpha.py
tictactoe/: tictactoe.py  tictactoe_play.py  tictactoe_selfplay.py  tictactoe_train.py  tictactoe_train_parallel.py
web/: gomoku.js  index.html  main.js  mcts.js  model.onnx  style.css  worker.js  wrangler.jsonc
(+448 files in other folders)
